gen/scratch-code.output
Terminale, die in Grammatik unbenutzt sind

   "return"
   "["
   "]"


Grammatik

    0 $accept: unit "end of file"

    1 unit: statements "end of file"

    2 statement: valueStandalone
    3          | conditional
    4          | forLoop
    5          | whileLoop
    6          | loopControlStatement

    7 statements: %empty
    8           | statements statement
    9           | statements localVariableDefinitionList

   10 statementsBlockInternal: "{" statements "}"
   11                        | statement

   12 statementsBlock: statementsBlockInternal

   13 localVariableDefinition: "identifier"

   14 localVariableDefinitions: %empty
   15                         | localVariableDefinitions "," localVariableDefinition

   16 localVariableDefinitionList: "variable type" localVariableDefinition localVariableDefinitions ";"

   17 conditional: conditionalIf
   18            | conditionalIf "else" statementsBlock

   19 conditionalIf: "if" "(" value ")" statementsBlock

   20 forLoop: "for" "(" value ";" value ";" value ")" statementsBlock

   21 whileLoop: "while" "(" value ")" statementsBlock

   22 loopControlStatement: "loop control statement" ";"

   23 valueStandalone: value ";"

   24 value: lValue
   25      | rValue
   26      | operation
   27      | "(" value ")"

   28 lValue: "identifier"

   29 rValue: "rvalue value"

   30 operation: value "=" value
   31          | value "+=" value
   32          | value "-=" value
   33          | value "*=" value
   34          | value "/=" value
   35          | value "%=" value
   36          | value "&=" value
   37          | value "|=" value
   38          | value "^=" value
   39          | value "<<=" value
   40          | value ">>=" value
   41          | value "||" value
   42          | value "&&" value
   43          | value "|" value
   44          | value "^" value
   45          | value "&" value
   46          | value "==" value
   47          | value "!=" value
   48          | value "<" value
   49          | value "<=" value
   50          | value ">" value
   51          | value ">=" value
   52          | value "<<" value
   53          | value ">>" value
   54          | value "+" value
   55          | value "-" value
   56          | value "*" value
   57          | value "/" value
   58          | value "%" value
   59          | "++" value
   60          | "--" value
   61          | "+" value
   62          | "-" value
   63          | "!" value
   64          | "~" value
   65          | value "++"
   66          | value "--"


Terminale und die Regeln, in denen sie verwendet werden

"end of file" (0) 0 1
error (256)
"if" (258) 19
"else" (259) 18
"while" (260) 21
"for" (261) 20
"return" (262)
"(" (263) 19 20 21 27
")" (264) 19 20 21 27
"[" (265)
"]" (266)
"{" (267) 10
"}" (268) 10
"," (269) 15
";" (270) 16 20 22 23
"+" (271) 54 61
"-" (272) 55 62
"++" (273) 59 65
"--" (274) 60 66
"!" (275) 63
"~" (276) 64
"*" (277) 56
"/" (278) 57
"%" (279) 58
"&" (280) 45
"|" (281) 43
"^" (282) 44
"<<" (283) 52
">>" (284) 53
"&&" (285) 42
"||" (286) 41
"<" (287) 48
"<=" (288) 49
">" (289) 50
">=" (290) 51
"==" (291) 46
"!=" (292) 47
"=" (293) 30
"+=" (294) 31
"-=" (295) 32
"*=" (296) 33
"/=" (297) 34
"%=" (298) 35
"&=" (299) 36
"|=" (300) 37
"^=" (301) 38
"<<=" (302) 39
">>=" (303) 40
"identifier" (304) 13 28
"variable type" (305) 16
"loop control statement" (306) 22
"rvalue value" (307) 29
"then" (308)
UNOP_UNARY_PLUS (309)
UNOP_UNARY_MINUS (310)
UNOP_POSTFIX_INCREMENT (311)
UNOP_POSTFIX_DECREMENT (312)


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (58)
    auf der linken Seite: 0
unit (59)
    auf der linken Seite: 1, auf der rechten Seite: 0
statement (60)
    auf der linken Seite: 2 3 4 5 6, auf der rechten Seite: 8 11
statements (61)
    auf der linken Seite: 7 8 9, auf der rechten Seite: 1 8 9 10
statementsBlockInternal (62)
    auf der linken Seite: 10 11, auf der rechten Seite: 12
statementsBlock (63)
    auf der linken Seite: 12, auf der rechten Seite: 18 19 20 21
localVariableDefinition (64)
    auf der linken Seite: 13, auf der rechten Seite: 15 16
localVariableDefinitions (65)
    auf der linken Seite: 14 15, auf der rechten Seite: 15 16
localVariableDefinitionList (66)
    auf der linken Seite: 16, auf der rechten Seite: 9
conditional (67)
    auf der linken Seite: 17 18, auf der rechten Seite: 3
conditionalIf (68)
    auf der linken Seite: 19, auf der rechten Seite: 17 18
forLoop (69)
    auf der linken Seite: 20, auf der rechten Seite: 4
whileLoop (70)
    auf der linken Seite: 21, auf der rechten Seite: 5
loopControlStatement (71)
    auf der linken Seite: 22, auf der rechten Seite: 6
valueStandalone (72)
    auf der linken Seite: 23, auf der rechten Seite: 2
value (73)
    auf der linken Seite: 24 25 26 27, auf der rechten Seite: 19 20
    21 23 27 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
lValue (74)
    auf der linken Seite: 28, auf der rechten Seite: 24
rValue (75)
    auf der linken Seite: 29, auf der rechten Seite: 25
operation (76)
    auf der linken Seite: 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66, auf der rechten Seite: 26


Zustand 0

    0 $accept: . unit "end of file"

    $default  reduziere mit Regel 7 (statements)

    unit        gehe zu Zustand 1 über
    statements  gehe zu Zustand 2 über


Zustand 1

    0 $accept: unit . "end of file"

    "end of file"  schiebe und gehe zu Zustand 3 über


Zustand 2

    1 unit: statements . "end of file"
    8 statements: statements . statement
    9           | statements . localVariableDefinitionList

    "end of file"             schiebe und gehe zu Zustand 4 über
    "if"                      schiebe und gehe zu Zustand 5 über
    "while"                   schiebe und gehe zu Zustand 6 über
    "for"                     schiebe und gehe zu Zustand 7 über
    "("                       schiebe und gehe zu Zustand 8 über
    "+"                       schiebe und gehe zu Zustand 9 über
    "-"                       schiebe und gehe zu Zustand 10 über
    "++"                      schiebe und gehe zu Zustand 11 über
    "--"                      schiebe und gehe zu Zustand 12 über
    "!"                       schiebe und gehe zu Zustand 13 über
    "~"                       schiebe und gehe zu Zustand 14 über
    "identifier"              schiebe und gehe zu Zustand 15 über
    "variable type"           schiebe und gehe zu Zustand 16 über
    "loop control statement"  schiebe und gehe zu Zustand 17 über
    "rvalue value"            schiebe und gehe zu Zustand 18 über

    statement                    gehe zu Zustand 19 über
    localVariableDefinitionList  gehe zu Zustand 20 über
    conditional                  gehe zu Zustand 21 über
    conditionalIf                gehe zu Zustand 22 über
    forLoop                      gehe zu Zustand 23 über
    whileLoop                    gehe zu Zustand 24 über
    loopControlStatement         gehe zu Zustand 25 über
    valueStandalone              gehe zu Zustand 26 über
    value                        gehe zu Zustand 27 über
    lValue                       gehe zu Zustand 28 über
    rValue                       gehe zu Zustand 29 über
    operation                    gehe zu Zustand 30 über


Zustand 3

    0 $accept: unit "end of file" .

    $default  annehmen


Zustand 4

    1 unit: statements "end of file" .

    $default  reduziere mit Regel 1 (unit)


Zustand 5

   19 conditionalIf: "if" . "(" value ")" statementsBlock

    "("  schiebe und gehe zu Zustand 31 über


Zustand 6

   21 whileLoop: "while" . "(" value ")" statementsBlock

    "("  schiebe und gehe zu Zustand 32 über


Zustand 7

   20 forLoop: "for" . "(" value ";" value ";" value ")" statementsBlock

    "("  schiebe und gehe zu Zustand 33 über


Zustand 8

   27 value: "(" . value ")"

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 34 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 9

   61 operation: "+" . value

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 35 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 10

   62 operation: "-" . value

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 36 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 11

   59 operation: "++" . value

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 37 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 12

   60 operation: "--" . value

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 38 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 13

   63 operation: "!" . value

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 39 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 14

   64 operation: "~" . value

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 40 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 15

   28 lValue: "identifier" .

    $default  reduziere mit Regel 28 (lValue)


Zustand 16

   16 localVariableDefinitionList: "variable type" . localVariableDefinition localVariableDefinitions ";"

    "identifier"  schiebe und gehe zu Zustand 41 über

    localVariableDefinition  gehe zu Zustand 42 über


Zustand 17

   22 loopControlStatement: "loop control statement" . ";"

    ";"  schiebe und gehe zu Zustand 43 über


Zustand 18

   29 rValue: "rvalue value" .

    $default  reduziere mit Regel 29 (rValue)


Zustand 19

    8 statements: statements statement .

    $default  reduziere mit Regel 8 (statements)


Zustand 20

    9 statements: statements localVariableDefinitionList .

    $default  reduziere mit Regel 9 (statements)


Zustand 21

    3 statement: conditional .

    $default  reduziere mit Regel 3 (statement)


Zustand 22

   17 conditional: conditionalIf .
   18            | conditionalIf . "else" statementsBlock

    "else"  schiebe und gehe zu Zustand 44 über

    $default  reduziere mit Regel 17 (conditional)


Zustand 23

    4 statement: forLoop .

    $default  reduziere mit Regel 4 (statement)


Zustand 24

    5 statement: whileLoop .

    $default  reduziere mit Regel 5 (statement)


Zustand 25

    6 statement: loopControlStatement .

    $default  reduziere mit Regel 6 (statement)


Zustand 26

    2 statement: valueStandalone .

    $default  reduziere mit Regel 2 (statement)


Zustand 27

   23 valueStandalone: value . ";"
   30 operation: value . "=" value
   31          | value . "+=" value
   32          | value . "-=" value
   33          | value . "*=" value
   34          | value . "/=" value
   35          | value . "%=" value
   36          | value . "&=" value
   37          | value . "|=" value
   38          | value . "^=" value
   39          | value . "<<=" value
   40          | value . ">>=" value
   41          | value . "||" value
   42          | value . "&&" value
   43          | value . "|" value
   44          | value . "^" value
   45          | value . "&" value
   46          | value . "==" value
   47          | value . "!=" value
   48          | value . "<" value
   49          | value . "<=" value
   50          | value . ">" value
   51          | value . ">=" value
   52          | value . "<<" value
   53          | value . ">>" value
   54          | value . "+" value
   55          | value . "-" value
   56          | value . "*" value
   57          | value . "/" value
   58          | value . "%" value
   65          | value . "++"
   66          | value . "--"

    ";"    schiebe und gehe zu Zustand 45 über
    "+"    schiebe und gehe zu Zustand 46 über
    "-"    schiebe und gehe zu Zustand 47 über
    "++"   schiebe und gehe zu Zustand 48 über
    "--"   schiebe und gehe zu Zustand 49 über
    "*"    schiebe und gehe zu Zustand 50 über
    "/"    schiebe und gehe zu Zustand 51 über
    "%"    schiebe und gehe zu Zustand 52 über
    "&"    schiebe und gehe zu Zustand 53 über
    "|"    schiebe und gehe zu Zustand 54 über
    "^"    schiebe und gehe zu Zustand 55 über
    "<<"   schiebe und gehe zu Zustand 56 über
    ">>"   schiebe und gehe zu Zustand 57 über
    "&&"   schiebe und gehe zu Zustand 58 über
    "||"   schiebe und gehe zu Zustand 59 über
    "<"    schiebe und gehe zu Zustand 60 über
    "<="   schiebe und gehe zu Zustand 61 über
    ">"    schiebe und gehe zu Zustand 62 über
    ">="   schiebe und gehe zu Zustand 63 über
    "=="   schiebe und gehe zu Zustand 64 über
    "!="   schiebe und gehe zu Zustand 65 über
    "="    schiebe und gehe zu Zustand 66 über
    "+="   schiebe und gehe zu Zustand 67 über
    "-="   schiebe und gehe zu Zustand 68 über
    "*="   schiebe und gehe zu Zustand 69 über
    "/="   schiebe und gehe zu Zustand 70 über
    "%="   schiebe und gehe zu Zustand 71 über
    "&="   schiebe und gehe zu Zustand 72 über
    "|="   schiebe und gehe zu Zustand 73 über
    "^="   schiebe und gehe zu Zustand 74 über
    "<<="  schiebe und gehe zu Zustand 75 über
    ">>="  schiebe und gehe zu Zustand 76 über


Zustand 28

   24 value: lValue .

    $default  reduziere mit Regel 24 (value)


Zustand 29

   25 value: rValue .

    $default  reduziere mit Regel 25 (value)


Zustand 30

   26 value: operation .

    $default  reduziere mit Regel 26 (value)


Zustand 31

   19 conditionalIf: "if" "(" . value ")" statementsBlock

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 77 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 32

   21 whileLoop: "while" "(" . value ")" statementsBlock

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 78 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 33

   20 forLoop: "for" "(" . value ";" value ";" value ")" statementsBlock

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 79 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 34

   27 value: "(" value . ")"
   30 operation: value . "=" value
   31          | value . "+=" value
   32          | value . "-=" value
   33          | value . "*=" value
   34          | value . "/=" value
   35          | value . "%=" value
   36          | value . "&=" value
   37          | value . "|=" value
   38          | value . "^=" value
   39          | value . "<<=" value
   40          | value . ">>=" value
   41          | value . "||" value
   42          | value . "&&" value
   43          | value . "|" value
   44          | value . "^" value
   45          | value . "&" value
   46          | value . "==" value
   47          | value . "!=" value
   48          | value . "<" value
   49          | value . "<=" value
   50          | value . ">" value
   51          | value . ">=" value
   52          | value . "<<" value
   53          | value . ">>" value
   54          | value . "+" value
   55          | value . "-" value
   56          | value . "*" value
   57          | value . "/" value
   58          | value . "%" value
   65          | value . "++"
   66          | value . "--"

    ")"    schiebe und gehe zu Zustand 80 über
    "+"    schiebe und gehe zu Zustand 46 über
    "-"    schiebe und gehe zu Zustand 47 über
    "++"   schiebe und gehe zu Zustand 48 über
    "--"   schiebe und gehe zu Zustand 49 über
    "*"    schiebe und gehe zu Zustand 50 über
    "/"    schiebe und gehe zu Zustand 51 über
    "%"    schiebe und gehe zu Zustand 52 über
    "&"    schiebe und gehe zu Zustand 53 über
    "|"    schiebe und gehe zu Zustand 54 über
    "^"    schiebe und gehe zu Zustand 55 über
    "<<"   schiebe und gehe zu Zustand 56 über
    ">>"   schiebe und gehe zu Zustand 57 über
    "&&"   schiebe und gehe zu Zustand 58 über
    "||"   schiebe und gehe zu Zustand 59 über
    "<"    schiebe und gehe zu Zustand 60 über
    "<="   schiebe und gehe zu Zustand 61 über
    ">"    schiebe und gehe zu Zustand 62 über
    ">="   schiebe und gehe zu Zustand 63 über
    "=="   schiebe und gehe zu Zustand 64 über
    "!="   schiebe und gehe zu Zustand 65 über
    "="    schiebe und gehe zu Zustand 66 über
    "+="   schiebe und gehe zu Zustand 67 über
    "-="   schiebe und gehe zu Zustand 68 über
    "*="   schiebe und gehe zu Zustand 69 über
    "/="   schiebe und gehe zu Zustand 70 über
    "%="   schiebe und gehe zu Zustand 71 über
    "&="   schiebe und gehe zu Zustand 72 über
    "|="   schiebe und gehe zu Zustand 73 über
    "^="   schiebe und gehe zu Zustand 74 über
    "<<="  schiebe und gehe zu Zustand 75 über
    ">>="  schiebe und gehe zu Zustand 76 über


Zustand 35

   30 operation: value . "=" value
   31          | value . "+=" value
   32          | value . "-=" value
   33          | value . "*=" value
   34          | value . "/=" value
   35          | value . "%=" value
   36          | value . "&=" value
   37          | value . "|=" value
   38          | value . "^=" value
   39          | value . "<<=" value
   40          | value . ">>=" value
   41          | value . "||" value
   42          | value . "&&" value
   43          | value . "|" value
   44          | value . "^" value
   45          | value . "&" value
   46          | value . "==" value
   47          | value . "!=" value
   48          | value . "<" value
   49          | value . "<=" value
   50          | value . ">" value
   51          | value . ">=" value
   52          | value . "<<" value
   53          | value . ">>" value
   54          | value . "+" value
   55          | value . "-" value
   56          | value . "*" value
   57          | value . "/" value
   58          | value . "%" value
   61          | "+" value .
   65          | value . "++"
   66          | value . "--"

    "++"  schiebe und gehe zu Zustand 48 über
    "--"  schiebe und gehe zu Zustand 49 über

    $default  reduziere mit Regel 61 (operation)


Zustand 36

   30 operation: value . "=" value
   31          | value . "+=" value
   32          | value . "-=" value
   33          | value . "*=" value
   34          | value . "/=" value
   35          | value . "%=" value
   36          | value . "&=" value
   37          | value . "|=" value
   38          | value . "^=" value
   39          | value . "<<=" value
   40          | value . ">>=" value
   41          | value . "||" value
   42          | value . "&&" value
   43          | value . "|" value
   44          | value . "^" value
   45          | value . "&" value
   46          | value . "==" value
   47          | value . "!=" value
   48          | value . "<" value
   49          | value . "<=" value
   50          | value . ">" value
   51          | value . ">=" value
   52          | value . "<<" value
   53          | value . ">>" value
   54          | value . "+" value
   55          | value . "-" value
   56          | value . "*" value
   57          | value . "/" value
   58          | value . "%" value
   62          | "-" value .
   65          | value . "++"
   66          | value . "--"

    "++"  schiebe und gehe zu Zustand 48 über
    "--"  schiebe und gehe zu Zustand 49 über

    $default  reduziere mit Regel 62 (operation)


Zustand 37

   30 operation: value . "=" value
   31          | value . "+=" value
   32          | value . "-=" value
   33          | value . "*=" value
   34          | value . "/=" value
   35          | value . "%=" value
   36          | value . "&=" value
   37          | value . "|=" value
   38          | value . "^=" value
   39          | value . "<<=" value
   40          | value . ">>=" value
   41          | value . "||" value
   42          | value . "&&" value
   43          | value . "|" value
   44          | value . "^" value
   45          | value . "&" value
   46          | value . "==" value
   47          | value . "!=" value
   48          | value . "<" value
   49          | value . "<=" value
   50          | value . ">" value
   51          | value . ">=" value
   52          | value . "<<" value
   53          | value . ">>" value
   54          | value . "+" value
   55          | value . "-" value
   56          | value . "*" value
   57          | value . "/" value
   58          | value . "%" value
   59          | "++" value .
   65          | value . "++"
   66          | value . "--"

    "++"  schiebe und gehe zu Zustand 48 über
    "--"  schiebe und gehe zu Zustand 49 über

    $default  reduziere mit Regel 59 (operation)


Zustand 38

   30 operation: value . "=" value
   31          | value . "+=" value
   32          | value . "-=" value
   33          | value . "*=" value
   34          | value . "/=" value
   35          | value . "%=" value
   36          | value . "&=" value
   37          | value . "|=" value
   38          | value . "^=" value
   39          | value . "<<=" value
   40          | value . ">>=" value
   41          | value . "||" value
   42          | value . "&&" value
   43          | value . "|" value
   44          | value . "^" value
   45          | value . "&" value
   46          | value . "==" value
   47          | value . "!=" value
   48          | value . "<" value
   49          | value . "<=" value
   50          | value . ">" value
   51          | value . ">=" value
   52          | value . "<<" value
   53          | value . ">>" value
   54          | value . "+" value
   55          | value . "-" value
   56          | value . "*" value
   57          | value . "/" value
   58          | value . "%" value
   60          | "--" value .
   65          | value . "++"
   66          | value . "--"

    "++"  schiebe und gehe zu Zustand 48 über
    "--"  schiebe und gehe zu Zustand 49 über

    $default  reduziere mit Regel 60 (operation)


Zustand 39

   30 operation: value . "=" value
   31          | value . "+=" value
   32          | value . "-=" value
   33          | value . "*=" value
   34          | value . "/=" value
   35          | value . "%=" value
   36          | value . "&=" value
   37          | value . "|=" value
   38          | value . "^=" value
   39          | value . "<<=" value
   40          | value . ">>=" value
   41          | value . "||" value
   42          | value . "&&" value
   43          | value . "|" value
   44          | value . "^" value
   45          | value . "&" value
   46          | value . "==" value
   47          | value . "!=" value
   48          | value . "<" value
   49          | value . "<=" value
   50          | value . ">" value
   51          | value . ">=" value
   52          | value . "<<" value
   53          | value . ">>" value
   54          | value . "+" value
   55          | value . "-" value
   56          | value . "*" value
   57          | value . "/" value
   58          | value . "%" value
   63          | "!" value .
   65          | value . "++"
   66          | value . "--"

    "++"  schiebe und gehe zu Zustand 48 über
    "--"  schiebe und gehe zu Zustand 49 über

    $default  reduziere mit Regel 63 (operation)


Zustand 40

   30 operation: value . "=" value
   31          | value . "+=" value
   32          | value . "-=" value
   33          | value . "*=" value
   34          | value . "/=" value
   35          | value . "%=" value
   36          | value . "&=" value
   37          | value . "|=" value
   38          | value . "^=" value
   39          | value . "<<=" value
   40          | value . ">>=" value
   41          | value . "||" value
   42          | value . "&&" value
   43          | value . "|" value
   44          | value . "^" value
   45          | value . "&" value
   46          | value . "==" value
   47          | value . "!=" value
   48          | value . "<" value
   49          | value . "<=" value
   50          | value . ">" value
   51          | value . ">=" value
   52          | value . "<<" value
   53          | value . ">>" value
   54          | value . "+" value
   55          | value . "-" value
   56          | value . "*" value
   57          | value . "/" value
   58          | value . "%" value
   64          | "~" value .
   65          | value . "++"
   66          | value . "--"

    "++"  schiebe und gehe zu Zustand 48 über
    "--"  schiebe und gehe zu Zustand 49 über

    $default  reduziere mit Regel 64 (operation)


Zustand 41

   13 localVariableDefinition: "identifier" .

    $default  reduziere mit Regel 13 (localVariableDefinition)


Zustand 42

   16 localVariableDefinitionList: "variable type" localVariableDefinition . localVariableDefinitions ";"

    $default  reduziere mit Regel 14 (localVariableDefinitions)

    localVariableDefinitions  gehe zu Zustand 81 über


Zustand 43

   22 loopControlStatement: "loop control statement" ";" .

    $default  reduziere mit Regel 22 (loopControlStatement)


Zustand 44

   18 conditional: conditionalIf "else" . statementsBlock

    "if"                      schiebe und gehe zu Zustand 5 über
    "while"                   schiebe und gehe zu Zustand 6 über
    "for"                     schiebe und gehe zu Zustand 7 über
    "("                       schiebe und gehe zu Zustand 8 über
    "{"                       schiebe und gehe zu Zustand 82 über
    "+"                       schiebe und gehe zu Zustand 9 über
    "-"                       schiebe und gehe zu Zustand 10 über
    "++"                      schiebe und gehe zu Zustand 11 über
    "--"                      schiebe und gehe zu Zustand 12 über
    "!"                       schiebe und gehe zu Zustand 13 über
    "~"                       schiebe und gehe zu Zustand 14 über
    "identifier"              schiebe und gehe zu Zustand 15 über
    "loop control statement"  schiebe und gehe zu Zustand 17 über
    "rvalue value"            schiebe und gehe zu Zustand 18 über

    statement                gehe zu Zustand 83 über
    statementsBlockInternal  gehe zu Zustand 84 über
    statementsBlock          gehe zu Zustand 85 über
    conditional              gehe zu Zustand 21 über
    conditionalIf            gehe zu Zustand 22 über
    forLoop                  gehe zu Zustand 23 über
    whileLoop                gehe zu Zustand 24 über
    loopControlStatement     gehe zu Zustand 25 über
    valueStandalone          gehe zu Zustand 26 über
    value                    gehe zu Zustand 27 über
    lValue                   gehe zu Zustand 28 über
    rValue                   gehe zu Zustand 29 über
    operation                gehe zu Zustand 30 über


Zustand 45

   23 valueStandalone: value ";" .

    $default  reduziere mit Regel 23 (valueStandalone)


Zustand 46

   54 operation: value "+" . value

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 86 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 47

   55 operation: value "-" . value

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 87 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 48

   65 operation: value "++" .

    $default  reduziere mit Regel 65 (operation)


Zustand 49

   66 operation: value "--" .

    $default  reduziere mit Regel 66 (operation)


Zustand 50

   56 operation: value "*" . value

    "("             schiebe und gehe zu Zustand 8 über
    "+"             schiebe und gehe zu Zustand 9 über
    "-"             schiebe und gehe zu Zustand 10 über
    "++"            schiebe und gehe zu Zustand 11 über
    "--"            schiebe und gehe zu Zustand 12 über
    "!"             schiebe und gehe zu Zustand 13 über
    "~"             schiebe und gehe zu Zustand 14 über
    "identifier"    schiebe und gehe zu Zustand 15 über
    "rvalue value"  schiebe und gehe zu Zustand 18 über

    value      gehe zu Zustand 88 über
    lValue     gehe zu Zustand 28 über
    rValue     gehe zu Zustand 29 über
    operation  gehe zu Zustand 30 über


Zustand 51

   57 operation: value "/" . value
